@@ -1,3 +1,13 @@
+2006-02-28 Mathieu Blondel <mblondel@cvs.gnome.org>
+
+    * tools/dictfmt.rb: This class will be used instead of the dictfmt
+    command line tool (shipped with dictd). Its main advantage is that it can
+    associate more than one index entry with one definition. This is
+    especially useful for japanese: a definition may be looked up in
+    hiragana or kanji.
+
+    * tools/kanjidic22dictd.rb: improved this converter using dictfmt.rb.
+
 2006-01-28 Mathieu Blondel <mblondel@cvs.gnome.org>
 
     * lib/fantasdic/ui/main_app.rb: save preferences when preferences dialog is
